--- a/lab9_10/pubspec.yaml
+++ b/lab9_10/pubspec.yaml
@@ -32,8 +32,9 @@ dependencies:
     sdk: flutter
   geocoding:
   geolocator:
-  flutter_map:
+  flutter_map: ^0.14.0
   latlong2:
+  xml:
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -56,6 +57,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - ../data/cedar_valley.gpx
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
