--- a/lab9_10/pubspec.yaml
+++ b/lab9_10/pubspec.yaml
@@ -58,7 +58,8 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
-    - ../data/cedar_valley.gpx
+    - lib/cedar_valley.gpx
+#    - ../data/cedar_valley.gpx
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
